// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`color prop when type is range 1`] = `
<div class="win-calendar">
  <div class="win-calendar__header">
    <div class="win-calendar__header-title">日期选择</div>
    <div class="win-calendar__header-subtitle">2010年1月</div>
    <div class="win-calendar__weekdays"><span class="win-calendar__weekday">日</span><span class="win-calendar__weekday">一</span><span class="win-calendar__weekday">二</span><span class="win-calendar__weekday">三</span><span class="win-calendar__weekday">四</span><span class="win-calendar__weekday">五</span><span class="win-calendar__weekday">六</span></div>
  </div>
  <div class="win-calendar__body">
    <div class="win-calendar__month" style="padding-bottom: 384px;">
      <div role="grid" class="win-calendar__days">
        <div class="win-calendar__month-mark">1</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="margin-left: 71.42857142857143%;">1</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">2</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">3</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">4</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">5</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">6</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">7</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">8</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">9</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day win-calendar__day--start" style="background: blue;">10<div class="win-calendar__bottom-info">开始</div>
        </div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day win-calendar__day--middle" style="color: blue;">11</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day win-calendar__day--middle" style="color: blue;">12</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day win-calendar__day--middle" style="color: blue;">13</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day win-calendar__day--middle" style="color: blue;">14</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day win-calendar__day--middle" style="color: blue;">15</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day win-calendar__day--middle" style="color: blue;">16</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day win-calendar__day--middle" style="color: blue;">17</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day win-calendar__day--middle" style="color: blue;">18</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day win-calendar__day--middle" style="color: blue;">19</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day win-calendar__day--end" style="background: blue;">20<div class="win-calendar__bottom-info">结束</div>
        </div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">21</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">22</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">23</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">24</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">25</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">26</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">27</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">28</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">29</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">30</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">31</div>
      </div>
    </div>
  </div>
  <div class="win-calendar__footer"><button type="button" class="win-button win-button--danger win-button--normal win-button--block win-button--round win-calendar__confirm" style="color: rgb(255, 255, 255); background: blue; border-color: blue;">
      <div class="win-button__content"><span class="win-button__text">确定</span></div>
    </button></div>
</div>
`;

exports[`color prop when type is single 1`] = `
<div class="win-calendar">
  <div class="win-calendar__header">
    <div class="win-calendar__header-title">日期选择</div>
    <div class="win-calendar__header-subtitle">2010年1月</div>
    <div class="win-calendar__weekdays"><span class="win-calendar__weekday">日</span><span class="win-calendar__weekday">一</span><span class="win-calendar__weekday">二</span><span class="win-calendar__weekday">三</span><span class="win-calendar__weekday">四</span><span class="win-calendar__weekday">五</span><span class="win-calendar__weekday">六</span></div>
  </div>
  <div class="win-calendar__body">
    <div class="win-calendar__month" style="padding-bottom: 384px;">
      <div role="grid" class="win-calendar__days">
        <div class="win-calendar__month-mark">1</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="margin-left: 71.42857142857143%;">1</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">2</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">3</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">4</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">5</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">6</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">7</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">8</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">9</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">
          <div class="win-calendar__selected-day" style="background: blue;">10</div>
        </div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">11</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">12</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">13</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">14</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">15</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">16</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">17</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">18</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">19</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">20</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">21</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">22</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">23</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">24</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">25</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">26</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">27</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">28</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">29</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">30</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">31</div>
      </div>
    </div>
  </div>
  <div class="win-calendar__footer"><button type="button" class="win-button win-button--danger win-button--normal win-button--block win-button--round win-calendar__confirm" style="color: rgb(255, 255, 255); background: blue; border-color: blue;">
      <div class="win-button__content"><span class="win-button__text">确定</span></div>
    </button></div>
</div>
`;

exports[`formatter prop 1`] = `
<div class="win-calendar">
  <div class="win-calendar__header">
    <div class="win-calendar__header-title">日期选择</div>
    <div class="win-calendar__header-subtitle">2010年1月</div>
    <div class="win-calendar__weekdays"><span class="win-calendar__weekday">日</span><span class="win-calendar__weekday">一</span><span class="win-calendar__weekday">二</span><span class="win-calendar__weekday">三</span><span class="win-calendar__weekday">四</span><span class="win-calendar__weekday">五</span><span class="win-calendar__weekday">六</span></div>
  </div>
  <div class="win-calendar__body">
    <div class="win-calendar__month" style="padding-bottom: 384px;">
      <div role="grid" class="win-calendar__days">
        <div class="win-calendar__month-mark">1</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="margin-left: 71.42857142857143%;">1</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">2</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">3</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">4</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">5</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">6</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">7</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">8</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">9</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">
          <div class="win-calendar__selected-day">10</div>
        </div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">
          <div class="win-calendar__top-info">Top Info</div>11
        </div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">12<div class="win-calendar__bottom-info">Bottom Info</div>
        </div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">Text</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day test">14</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">15</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">16</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">17</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">18</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">19</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">20</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">21</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">22</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">23</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">24</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">25</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">26</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">27</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">28</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">29</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">30</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">31</div>
      </div>
    </div>
  </div>
  <div class="win-calendar__footer"><button type="button" class="win-button win-button--danger win-button--normal win-button--block win-button--round win-calendar__confirm">
      <div class="win-button__content"><span class="win-button__text">确定</span></div>
    </button></div>
</div>
`;

exports[`popup wrapper 1`] = ``;

exports[`popup wrapper 2`] = `
<div class="win-popup win-popup--round win-popup--bottom win-calendar__popup" name="win-popup-slide-bottom" style="z-index: 2002;">
  <div class="win-calendar">
    <div class="win-calendar__header">
      <div class="win-calendar__header-title">日期选择</div>
      <div class="win-calendar__header-subtitle">2010年1月</div>
      <div class="win-calendar__weekdays"><span class="win-calendar__weekday">日</span><span class="win-calendar__weekday">一</span><span class="win-calendar__weekday">二</span><span class="win-calendar__weekday">三</span><span class="win-calendar__weekday">四</span><span class="win-calendar__weekday">五</span><span class="win-calendar__weekday">六</span></div>
    </div>
    <div class="win-calendar__body">
      <div class="win-calendar__month" style="padding-bottom: 384px;">
        <div role="grid" class="win-calendar__days">
          <div class="win-calendar__month-mark">1</div>
          <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="margin-left: 71.42857142857143%;">1</div>
          <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">2</div>
          <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">3</div>
          <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">4</div>
          <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">5</div>
          <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">6</div>
          <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">7</div>
          <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">8</div>
          <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">9</div>
          <div role="gridcell" tabindex="-1" class="win-calendar__day">
            <div class="win-calendar__selected-day">10</div>
          </div>
          <div role="gridcell" tabindex="-1" class="win-calendar__day">11</div>
          <div role="gridcell" tabindex="-1" class="win-calendar__day">12</div>
          <div role="gridcell" tabindex="-1" class="win-calendar__day">13</div>
          <div role="gridcell" tabindex="-1" class="win-calendar__day">14</div>
          <div role="gridcell" tabindex="-1" class="win-calendar__day">15</div>
          <div role="gridcell" tabindex="-1" class="win-calendar__day">16</div>
          <div role="gridcell" tabindex="-1" class="win-calendar__day">17</div>
          <div role="gridcell" tabindex="-1" class="win-calendar__day">18</div>
          <div role="gridcell" tabindex="-1" class="win-calendar__day">19</div>
          <div role="gridcell" tabindex="-1" class="win-calendar__day">20</div>
          <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">21</div>
          <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">22</div>
          <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">23</div>
          <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">24</div>
          <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">25</div>
          <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">26</div>
          <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">27</div>
          <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">28</div>
          <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">29</div>
          <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">30</div>
          <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">31</div>
        </div>
      </div>
    </div>
    <div class="win-calendar__footer"><button type="button" class="win-button win-button--danger win-button--normal win-button--block win-button--round win-calendar__confirm">
        <div class="win-button__content"><span class="win-button__text">确定</span></div>
      </button></div>
  </div><i role="button" tabindex="0" class="win-icon win-icon-cross win-popup__close-icon win-popup__close-icon--top-right">
    <!----></i>
</div>
`;

exports[`row-height prop 1`] = `
<div class="win-calendar">
  <div class="win-calendar__header">
    <div class="win-calendar__header-title">日期选择</div>
    <div class="win-calendar__header-subtitle">2010年1月</div>
    <div class="win-calendar__weekdays"><span class="win-calendar__weekday">日</span><span class="win-calendar__weekday">一</span><span class="win-calendar__weekday">二</span><span class="win-calendar__weekday">三</span><span class="win-calendar__weekday">四</span><span class="win-calendar__weekday">五</span><span class="win-calendar__weekday">六</span></div>
  </div>
  <div class="win-calendar__body">
    <div class="win-calendar__month" style="padding-bottom: 300px;">
      <div role="grid" class="win-calendar__days">
        <div class="win-calendar__month-mark">1</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="margin-left: 71.42857142857143%; height: 50px;">1</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="height: 50px;">2</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="height: 50px;">3</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="height: 50px;">4</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="height: 50px;">5</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="height: 50px;">6</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="height: 50px;">7</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="height: 50px;">8</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="height: 50px;">9</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day" style="height: 50px;">
          <div class="win-calendar__selected-day">10</div>
        </div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day" style="height: 50px;">11</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day" style="height: 50px;">12</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day" style="height: 50px;">13</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day" style="height: 50px;">14</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day" style="height: 50px;">15</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day" style="height: 50px;">16</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day" style="height: 50px;">17</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day" style="height: 50px;">18</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day" style="height: 50px;">19</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day" style="height: 50px;">20</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="height: 50px;">21</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="height: 50px;">22</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="height: 50px;">23</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="height: 50px;">24</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="height: 50px;">25</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="height: 50px;">26</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="height: 50px;">27</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="height: 50px;">28</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="height: 50px;">29</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="height: 50px;">30</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="height: 50px;">31</div>
      </div>
    </div>
  </div>
  <div class="win-calendar__footer"><button type="button" class="win-button win-button--danger win-button--normal win-button--block win-button--round win-calendar__confirm">
      <div class="win-button__content"><span class="win-button__text">确定</span></div>
    </button></div>
</div>
`;

exports[`title & footer slot 1`] = `
<div class="win-calendar">
  <div class="win-calendar__header">
    <div class="win-calendar__header-title">Custom Title</div>
    <div class="win-calendar__header-subtitle">2010年1月</div>
    <div class="win-calendar__weekdays"><span class="win-calendar__weekday">日</span><span class="win-calendar__weekday">一</span><span class="win-calendar__weekday">二</span><span class="win-calendar__weekday">三</span><span class="win-calendar__weekday">四</span><span class="win-calendar__weekday">五</span><span class="win-calendar__weekday">六</span></div>
  </div>
  <div class="win-calendar__body">
    <div class="win-calendar__month" style="padding-bottom: 384px;">
      <div role="grid" class="win-calendar__days">
        <div class="win-calendar__month-mark">1</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled" style="margin-left: 71.42857142857143%;">1</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">2</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">3</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">4</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">5</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">6</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">7</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">8</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">9</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">
          <div class="win-calendar__selected-day">10</div>
        </div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">11</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">12</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">13</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">14</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">15</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">16</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">17</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">18</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">19</div>
        <div role="gridcell" tabindex="-1" class="win-calendar__day">20</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">21</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">22</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">23</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">24</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">25</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">26</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">27</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">28</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">29</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">30</div>
        <div role="gridcell" class="win-calendar__day win-calendar__day--disabled">31</div>
      </div>
    </div>
  </div>
  <div class="win-calendar__footer">Custom Footer</div>
</div>
`;
